syntax='proto3';

package greet;
option go_package="greetpb";

message Greeting{
    string first_name=1;
    string second_name=2;
}

message GreetRequest{
    Greeting greeting=1;
}

message GreetResponse{
    string result=1;
}
message GreetManyTimesRequest{
    Greeting greeting=1;
}

message GreetManyTimesResponse{
    string result=1;
}

message LongGreetrequest{
    Greeting greeting=1;
}

message LongGreetresponse{
    string result=1;
}

message GreetEveryoneRequest{
    Greeting greeting=1;
}

message GreetEveryoneresponse{
    string result=1;
}

message SquareRootRequest{
    int64 number=1;
}

message SquareRootResponse{
    double number_root=1;
}

message GreetWithDeadRequest{
    Greeting greeting=1;
}

message GreetWithDeadResponse{
    string result=1;
}

service GreetService{
    //unary
    rpc Greet(GreetRequest)  returns (GreetResponse){};
    //server streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};
    //stream processing
    rpc LongGreet(stream LongGreetrequest) returns (LongGreetresponse) {};
    //bidirectional streams
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneresponse) {};
    //Error handling
    rpc SquarRoot(SquareRootRequest) returns (SquareRootResponse) {};
    //unary
    rpc GreetWithDeadline(GreetWithDeadRequest)  returns (GreetWithDeadResponse){};
}
